--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -387,6 +387,16 @@ main {
         }
     }
 
+    .loader
+    {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 466px;
+        margin: -10px 0 170px 0;
+        padding: 30px 0 10px 0;
+    }
+
     // mobile scroller
     .scroll-list {
         display: flex;
@@ -751,6 +761,13 @@ main {
             }
         }
 
+        .loader
+        {
+            height: 29vw;
+            max-height: 500px;
+            margin: 46px 0 166px 0;
+        }
+
         // desktop slider (visible)
         .slider {
             display: block;
@@ -811,6 +828,9 @@ main {
                 }
 
                 .slider__list {
+                    --active-index: 1; 
+                    --drag-offset: 0px;
+
                     position: unset;
                     display: flex;
                     flex-direction: row;
@@ -820,6 +840,8 @@ main {
                     padding: 0;
                     gap: 6%;
                     will-change: transform, opacity;
+
+                    transform: translateX( calc(var(--active-index) * -55% + var(--drag-offset)) );
                 }
 
                 .slider__slide {
